--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "cd app/db && ../../node_modules/.bin/sequelize db:migrate && cd ../.. ",
+    "add-migration": "cd app/db && ../../node_modules/sequelize-auto-migrations/makemigration.js && cd ../.. "
   },
   "repository": {
     "type": "git",
