--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/freeride8/kick-survey#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "morgan": "^1.9.0",
     "mysql2": "^1.5.2",
     "passport": "^0.4.0",
     "pug": "^2.0.1",
