Small changes in the scripts in package.json. Removed my migrations and added one migration.

--- a/app/db/config/config.json
+++ b/app/db/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "root",
+    "username": "targov",
     "password": null,
     "database": "kick_survey_db",
     "host": "127.0.0.1",
