--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
+    "debug": "^3.1.0",
     "eslint": "^4.19.0",
     "eslint-config-google": "^0.9.1"
   }
