--- a/app/db/config/config.json
+++ b/app/db/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "securepass",
+    "password": null,
     "database": "kick_survey_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
