--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/freeride8/kick-survey#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "chai-as-promised": "^7.1.1",
     "chart.js": "^2.7.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
