--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
-    "debug": "^3.1.0",
     "babel-plugin-istanbul": "^4.1.5",
     "chai": "^4.1.2",
+    "debug": "^3.1.0",
     "eslint": "^4.19.0",
     "eslint-config-google": "^0.9.1",
+    "eslint-config-jquery": "^1.0.1",
     "mocha": "^5.0.4",
     "nyc": "^11.6.0",
     "sinon": "^4.4.6"
