--- a/package.json
+++ b/package.json
@@ -48,5 +48,11 @@
     "mocha": "^5.0.4",
     "nyc": "^11.6.0",
     "sinon": "^4.4.6"
+  },
+  "nyc": {
+    "include": [
+      "**/*controllers",
+      "**/*data"
+    ]
   }
 }
