--- a/public/js/.eslintrc
+++ b/public/js/.eslintrc
@@ -16,6 +16,8 @@
     },
     "globals": {
         "$": true,
-        "Promise": true
+        "Promise": true,
+        "console": true,
+        "document": true
     }
 }
